color scheme changes to homepage 'get a quote' section

--- a/style.css
+++ b/style.css
@@ -633,7 +633,13 @@ header .light-logo {
 /* Get A Quote Section */
 
 .work-with-us {
-    background-image: url(http://i66.tinypic.com/2dtuk44.jpg);
+   background: -moz-linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(0,140,140,1) 90%, rgba(0,156,156,1) 100%); /* ff3.6+ */
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(0,0,0,1)), color-stop(90%, rgba(0,140,140,1)), color-stop(100%, rgba(0,156,156,1))); /* safari4+,chrome */
+background: -webkit-linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(0,140,140,1) 90%, rgba(0,156,156,1) 100%); /* safari5.1+,chrome10+ */
+background: -o-linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(0,140,140,1) 90%, rgba(0,156,156,1) 100%); /* opera 11.10+ */
+background: -ms-linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(0,140,140,1) 90%, rgba(0,156,156,1) 100%); /* ie10+ */
+background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(0,140,140,1) 90%, rgba(0,156,156,1) 100%); /* w3c */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009C9C', endColorstr='#000000',GradientType=1 ); /* ie6-9 */
 }
 
 .work-text {
